# sdl-tutorial-files

./: .gitignore  CMakeLists.txt  README.md  main.cpp  smth.cpp
animation/: main.cpp
geometry rendering/: main.cpp
include/: Dot.h  Globals.h  LTexture.h  SDL_Init.h
png loading/: main.cpp
soft stretching/: main.cpp
src/: Dot.cpp  LTexture.cpp
texture rendering/: main.cpp
